--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/angular2-jsonapi/tsconfig.lib.json",
             "project": "projects/angular2-jsonapi/ng-package.json"
@@ -19,26 +19,31 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/angular2-jsonapi/src/test.ts",
             "tsConfig": "projects/angular2-jsonapi/tsconfig.spec.json",
-            "karmaConfig": "projects/angular2-jsonapi/karma.conf.js",
-            "sourceMap": true
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing",
+              "@abraham/reflection"
+            ],
+            "karmaConfig": "projects/angular2-jsonapi/karma.conf.js"
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "projects/angular2-jsonapi/tsconfig.lib.json",
-              "projects/angular2-jsonapi/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "projects/angular2-jsonapi/**/*.ts",
+              "projects/angular2-jsonapi/**/*.html"
             ]
           }
         }
       }
     }
   },
-  "defaultProject": "angular2-jsonapi"
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
+    "analytics": false
+  }
 }
