--- a/package.json
+++ b/package.json
@@ -8,44 +8,48 @@
     "lint": "ng lint",
     "ng": "ng",
     "start": "ng serve",
+    "watch": "ng build --watch",
     "test": "ng test"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular-devkit/build-ng-packagr": "~0.803.4",
-    "@angular/animations": "~8.2.6",
-    "@angular/cli": "~8.3.4",
-    "@angular/common": "~8.2.6",
-    "@angular/compiler": "~8.2.6",
-    "@angular/compiler-cli": "~8.2.6",
-    "@angular/core": "~8.2.6",
-    "@angular/forms": "~8.2.6",
-    "@angular/language-service": "~8.2.6",
-    "@angular/platform-browser": "~8.2.6",
-    "@angular/platform-browser-dynamic": "~8.2.6",
-    "@angular/router": "~8.2.6",
-    "@types/jasmine": "~3.4.0",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~12.7.5",
-    "codelyzer": "^5.1.0",
-    "coveralls": "^3.0.6",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.5.0",
-    "protractor": "~5.4.2",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.3",
-    "ts-node": "~8.3.0",
-    "tsickle": "^0.37.0",
-    "tslib": "^1.10.0",
-    "tslint": "~5.20.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.10.2"
+    "@abraham/reflection": "^0.12.0",
+    "@angular-devkit/build-angular": "^18.2.1",
+    "@angular-eslint/builder": "18.3.0",
+    "@angular-eslint/eslint-plugin": "18.3.0",
+    "@angular-eslint/eslint-plugin-template": "18.3.0",
+    "@angular-eslint/schematics": "18.3.0",
+    "@angular-eslint/template-parser": "18.3.0",
+    "@angular/animations": "^18.2.0",
+    "@angular/cli": "^18.2.1",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/compiler-cli": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/language-service": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/router": "^18.2.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.4.2",
+    "@typescript-eslint/eslint-plugin": "8.2.0",
+    "@typescript-eslint/parser": "8.2.0",
+    "codelyzer": "^6.0.2",
+    "coveralls": "^3.1.1",
+    "date-fns": "^3.6.0",
+    "eslint": "^9.9.0",
+    "jasmine-core": "^5.2.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "lodash-es": "^4.17.21",
+    "ng-packagr": "^18.2.1",
+    "rxjs": "~7.8.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
+    "typescript": "~5.5.4",
+    "zone.js": "~0.14.10"
   }
 }
