--- a/projects/angular2-jsonapi/package.json
+++ b/projects/angular2-jsonapi/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "angular2-jsonapi",
-  "version": "8.2.1",
+  "name": "nab-angular2-jsonapi",
+  "version": "18.2.3",
   "description": "A lightweight Angular 2 adapter for JSON API",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ghidoz/angular2-jsonapi"
+    "url": "https://github.com/karwank/nab-angular2-jsonapi"
   },
   "author": {
-    "name": "Daniele Ghidoli",
-    "url": "http://danieleghidoli.it"
+    "name": "KarwanK"
   },
   "keywords": [
     "angular",
@@ -19,18 +18,18 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ghidoz/angular2-jsonapi/issues"
+    "url": "https://github.com/karwank/nab-angular2-jsonapi/issues"
   },
   "dependencies": {
-    "date-fns": "^2.2.1",
-    "lodash-es": "^4.17.15",
-    "qs": "^6.8.0",
-    "tslib": "^1.10.0"
+    "date-fns": "^3.6.0",
+    "lodash-es": "^4.17.21",
+    "qs": "^6.13.0",
+    "tslib": "^2.6.3"
   },
   "peerDependencies": {
-    "@angular/common": "^8.2.5",
-    "@angular/core": "^8.2.5",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.3"
+    "@angular/common": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@abraham/reflection": "^0.12.0",
+    "rxjs": "*"
   }
 }
